# vec_expi

./: CMakeLists.txt  README.md
include/: avx_mathfun.h  vec_expi.hh
test/: CMakeLists.txt  test_vec_expi.cc
